<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WeatherActivity">

    <Button
            android:text="@string/w_clear_button"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:id="@+id/wClearButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintBottom_toTopOf="@+id/wBackButton" />

    <TextView
            android:text="@string/weather_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weerTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textSize="34sp"
            android:textAlignment="center" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/locationInput"
            android:hint="@string/location_input_hint"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/weerTitle"
            android:autofillHints=""
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/placeAndCountryName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/locationInput"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/placeholder_location_landcode"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:text="@string/back_button"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:id="@+id/wBackButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:textSize="16sp" />

    <TextView
            android:text="@string/placeholder_degrees_celsius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/degrees"
            app:layout_constraintStart_toStartOf="@+id/placeAndCountryName"
            app:layout_constraintTop_toBottomOf="@+id/placeAndCountryName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/placeAndCountryName"
            android:layout_marginEnd="50dp" />

    <TextView
            android:text="@string/placeholder_weather_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/weather"
            app:layout_constraintStart_toStartOf="@+id/degrees"
            app:layout_constraintTop_toBottomOf="@+id/degrees"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/degrees" />

    <TextView
            android:text="@string/placeholder_wind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/wind"
            app:layout_constraintStart_toStartOf="@+id/weather"
            app:layout_constraintTop_toBottomOf="@+id/weather"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/weather" />

    <TextView
            android:text="@string/placeholder_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/humidity"
            app:layout_constraintStart_toStartOf="@+id/wind"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/wind"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/wind" />

    <TextView
            android:text="@string/placeholder_pressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pressure"
            app:layout_constraintStart_toStartOf="@+id/humidity"
            app:layout_constraintTop_toBottomOf="@+id/humidity"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/humidity" />

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/weatherIcon"
            app:layout_constraintTop_toBottomOf="@+id/placeAndCountryName"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/wind"
            android:layout_marginStart="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>