<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appTitleText"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textSize="34sp"
            android:textAlignment="center" />

    <Button
            android:text="@string/weather_button"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:id="@+id/weatherButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp"
            app:layout_constraintTop_toBottomOf="@+id/appTitleText"
            android:textSize="16sp" />

    <Button
            android:text="@string/earthquakes_netherlands_button"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:id="@+id/eathquakesNButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherButton"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />

    <Button
            android:text="@string/earthquakes_worldwide_button"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:id="@+id/earthquakesWWButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eathquakesNButton"
            android:textSize="16sp"
            android:layout_marginTop="10dp" />

    <TextView
            android:text="@string/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/creditsText"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>